// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Text has a helptext 1`] = `
<div>
  <div
    aria-labelledby="textField_fieldDetails"
    class="form-group hide"
    data-field-name="textField"
    tabindex="0"
  >
    <input
      class="form-control ddm-field-text"
      id="textField"
      name="textField"
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      class="form-text"
    >
      Type something
    </span>
    <span
      aria-hidden="false"
      hidden=""
      id="textField_fieldDetails"
    >
      Type something
      <br />
    </span>
  </div>
</div>
`;

exports[`Field Text has a label 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
  >
    <label
      aria-labelledby="textField_fieldDetails"
      class="ddm-label"
      for="textField"
      tabindex="0"
    >
      label
    </label>
    <input
      class="form-control ddm-field-text"
      id="textField"
      name="textField"
      type="text"
      value=""
    />
    <span
      aria-hidden="false"
      hidden=""
      id="textField_fieldDetails"
    >
      label
      <br />
    </span>
  </div>
</div>
`;

exports[`Field Text has a placeholder 1`] = `
<div>
  <div
    aria-labelledby="textField_fieldDetails"
    class="form-group hide"
    data-field-name="textField"
    tabindex="0"
  >
    <input
      class="form-control ddm-field-text"
      id="textField"
      name="textField"
      placeholder="Placeholder"
      type="text"
      value=""
    />
    
  </div>
</div>
`;

exports[`Field Text has a value 1`] = `
<div>
  <div
    aria-labelledby="textField_fieldDetails"
    class="form-group hide"
    data-field-name="textField"
    tabindex="0"
  >
    <input
      class="form-control ddm-field-text"
      id="textField"
      name="textField"
      type="text"
      value="value"
    />
    
  </div>
</div>
`;

exports[`Field Text has an id 1`] = `
<div>
  <div
    aria-labelledby="textField_fieldDetails"
    class="form-group hide"
    data-field-name="textField"
    tabindex="0"
  >
    <input
      class="form-control ddm-field-text"
      id="Id"
      name="textField"
      type="text"
      value=""
    />
    
  </div>
</div>
`;

exports[`Field Text is not readOnly 1`] = `
<div>
  <div
    aria-labelledby="textField_fieldDetails"
    class="form-group hide"
    data-field-name="textField"
    tabindex="0"
  >
    <input
      class="form-control ddm-field-text"
      id="textField"
      name="textField"
      type="text"
      value=""
    />
    
  </div>
</div>
`;

exports[`Field Text is not required 1`] = `
<div>
  <div
    aria-labelledby="textField_fieldDetails"
    class="form-group hide"
    data-field-name="textField"
    tabindex="0"
  >
    <input
      class="form-control ddm-field-text"
      id="textField"
      name="textField"
      type="text"
      value=""
    />
    
  </div>
</div>
`;

exports[`Field Text is readOnly 1`] = `
<div>
  <div
    aria-labelledby="textField_fieldDetails"
    class="form-group hide"
    data-field-name="textField"
    tabindex="0"
  >
    <input
      class="form-control ddm-field-text"
      disabled=""
      id="textField"
      name="textField"
      type="text"
      value=""
    />
    
  </div>
</div>
`;

exports[`Field Text renders Label if showLabel is true 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
  >
    <label
      aria-labelledby="textField_fieldDetails"
      class="ddm-label"
      for="textField"
      tabindex="0"
    >
      text
    </label>
    <input
      class="form-control ddm-field-text"
      id="textField"
      name="textField"
      type="text"
      value=""
    />
    <span
      aria-hidden="false"
      hidden=""
      id="textField_fieldDetails"
    >
      text
      <br />
    </span>
  </div>
</div>
`;
